# Chip8-Emulator

./: CMakeLists.txt  README.md  chip8.cpp  chip8.hpp
include/: chip8.hpp  platform.hpp
src/: chip8.cpp  main.cpp  platform.cpp
